--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "cookie-session": "^2.0.0-alpha.2",
     "csurf": "^1.9.0",
     "express": "^4.14.0",
+    "express-session": "^1.15.5",
     "knox": "^0.9.2",
+    "morgan": "^1.8.2",
     "multer": "^1.3.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
@@ -45,5 +47,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^4.6.1",
+    "eslint-plugin-react": "^7.3.0"
+  }
 }
