--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "redux-promise": "^0.5.3",
     "socket.io": "^2.0.3",
     "spiced-pg": "spicedacademy/spiced-pg",
+    "tern-node-express": "^0.4.0",
     "uid-safe": "^2.1.4",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.8.4"
